remove yarn file, fix text align and error check

--- a/react-and-morty/src/components/Characters.css
+++ b/react-and-morty/src/components/Characters.css
@@ -5,6 +5,7 @@
     width: 100%;
     margin-top: 45px;
     margin-bottom: 45px;
+    text-align: center;
 }
 
 #characterCardContainer {
