--- a/react-and-morty/src/components/Locations.css
+++ b/react-and-morty/src/components/Locations.css
@@ -6,6 +6,7 @@
     width: 100%;
     margin-top: 45px;
     margin-bottom: 45px;
+    text-align: center;
 }
 
 .locationData {
